--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,11 +24,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest setuptools wheel twine
+        python -m pip install flake8 pytest
+        python -m pip install setuptools wheel twine
         python -m pip install -r requirements.txt
     - name: Lint with flake8
       run: |
-        flake8 .
+        flake8 . --count --show-source --statistics
     - name: Test with pytest
       run: |
         pytest
