Make docker image name lower case

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -63,4 +63,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: kvdheijden/dDNS:latest
+          tags: kvdheijden/ddns:latest
