--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Version
+        id: version
+        run: |
+          echo '::set-output name=VERSION::$(python -m ddns --version)'
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -63,4 +68,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: kvdheijden/ddns:latest
+          tags: kvdheijden/ddns:${{ version.VERSION }}-python${{ matrix.python-version }}
