--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,4 +68,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: kvdheijden/ddns:${{ version.VERSION }}-python${{ matrix.python-version }}
+          tags: kvdheijden/ddns:${{ steps.version.outputs.VERSION }}-python${{ matrix.python-version }}
