--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Version
         id: version
         run: |
-          echo ::set-output name=VERSION::$(python -m ddns --version)
+          echo ::set-output name=VERSION::$(python -m transipddnsclient --version)
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -67,5 +67,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          build-args: |
+            PYTHON_VERSION=${{ matrix.python-version }}
           push: true
-          tags: kvdheijden/ddns:${{ steps.version.outputs.VERSION }}-python${{ matrix.python-version }}
+          tags: kvdheijden/transipddnsclient:${{ steps.version.outputs.VERSION }}-python${{ matrix.python-version }}
